# ConoBot

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/scripts/: ci_config_generator.py
.github/workflows/: README.md
.github/workflows/ci/: consolidated-ci.yml  python-publish.yml
.github/workflows/docker/: consolidated-docker-build.yml
.github/workflows/runners/: consolidated-runners.yml  self-scheduled-intel-gaudi.yml  self-scheduled.yml
ai_cores/AgenticLLM/GPT-like-leader/conotransformer_v1/: __init__.py  configuration_conotransformer.py  modular_conotransformer.py  tokenization_conotransformer.py
assets/: styles.qss
frontend/: main.py  setup_manager.py
middleware/: cfgutils.py  workflow.py
transformers/tests/fixtures/: test_sentencepiece.model  test_sentencepiece_bpe.model  test_sentencepiece_bpe_char.model  test_sentencepiece_no_bos.model  test_sentencepiece_with_bytefallback.model
